ANTLR/interpreter/tuaParser.py
# Generated from ../grammars/tua.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class tuaParser ( Parser ):

    grammarFileName = "tua.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "'do'", "'end'", "'while'", 
                     "'if'", "'then'", "'elseif'", "'else'", "'for'", "','", 
                     "'in'", "'function'", "':'", "'Table'", "'['", "']'", 
                     "'Union'", "'List'", "'.'", "'('", "')'", "'->'", "'return'", 
                     "'break'", "'continue'", "'{'", "'}'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'//'", "'=='", "'~='", "'<='", 
                     "'>='", "'<'", "'>'", "'..'", "'and'", "'&'", "'or'", 
                     "'|'", "'^'", "'not'", "<INVALID>", "'false'", "'true'", 
                     "'nil'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NAME", "FALSE", "TRUE", "NIL", "INT", "FLOAT", "DOUBLEQUOTESTRING", 
                      "SINGLEQUOTESTRING", "WHITESPACE" ]

    RULE_program = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_var = 3
    RULE_nametype = 4
    RULE_type = 5
    RULE_tableType = 6
    RULE_unionType = 7
    RULE_listType = 8
    RULE_prefix = 9
    RULE_suffix = 10
    RULE_exp = 11
    RULE_functionbody = 12
    RULE_laststat = 13
    RULE_typednamelist = 14
    RULE_functioncall = 15
    RULE_explist = 16
    RULE_tableconstructor = 17
    RULE_fieldlist = 18
    RULE_field = 19
    RULE_binopAddSub = 20
    RULE_binopMulDivMod = 21
    RULE_binopComparison = 22
    RULE_binopConcat = 23
    RULE_binopAnd = 24
    RULE_binopOr = 25
    RULE_binopPower = 26
    RULE_unop = 27
    RULE_string = 28
    RULE_number = 29

    ruleNames =  [ "program", "block", "stat", "var", "nametype", "type", 
                   "tableType", "unionType", "listType", "prefix", "suffix", 
                   "exp", "functionbody", "laststat", "typednamelist", "functioncall", 
                   "explist", "tableconstructor", "fieldlist", "field", 
                   "binopAddSub", "binopMulDivMod", "binopComparison", "binopConcat", 
                   "binopAnd", "binopOr", "binopPower", "unop", "string", 
                   "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    NAME=48
    FALSE=49
    TRUE=50
    NIL=51
    INT=52
    FLOAT=53
    DOUBLEQUOTESTRING=54
    SINGLEQUOTESTRING=55
    WHITESPACE=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(tuaParser.BlockContext,0)


        def EOF(self):
            return self.getToken(tuaParser.EOF, 0)

        def getRuleIndex(self):
            return tuaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = tuaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.block()
            self.state = 61
            self.match(tuaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tuaParser.StatContext)
            else:
                return self.getTypedRuleContext(tuaParser.StatContext,i)


        def laststat(self):
            return self.getTypedRuleContext(tuaParser.LaststatContext,0)


        def getRuleIndex(self):
            return tuaParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = tuaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 281474976719976) != 0):
                self.state = 63
                self.stat()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 64
                    self.match(tuaParser.T__0)


                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 117440512) != 0):
                self.state = 72
                self.laststat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nametype(self):
            return self.getTypedRuleContext(tuaParser.NametypeContext,0)


        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(tuaParser.ExpContext,i)


        def var(self):
            return self.getTypedRuleContext(tuaParser.VarContext,0)


        def functioncall(self):
            return self.getTypedRuleContext(tuaParser.FunctioncallContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tuaParser.BlockContext)
            else:
                return self.getTypedRuleContext(tuaParser.BlockContext,i)


        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(tuaParser.NAME)
            else:
                return self.getToken(tuaParser.NAME, i)

        def functionbody(self):
            return self.getTypedRuleContext(tuaParser.FunctionbodyContext,0)


        def getRuleIndex(self):
            return tuaParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = tuaParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.nametype()
                self.state = 76
                self.match(tuaParser.T__1)
                self.state = 77
                self.exp(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.var()
                self.state = 80
                self.match(tuaParser.T__1)
                self.state = 81
                self.exp(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.functioncall()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.match(tuaParser.T__2)
                self.state = 85
                self.block()
                self.state = 86
                self.match(tuaParser.T__3)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.match(tuaParser.T__4)
                self.state = 89
                self.exp(0)
                self.state = 90
                self.match(tuaParser.T__2)
                self.state = 91
                self.block()
                self.state = 92
                self.match(tuaParser.T__3)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 94
                self.match(tuaParser.T__5)
                self.state = 95
                self.exp(0)
                self.state = 96
                self.match(tuaParser.T__6)
                self.state = 97
                self.block()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==8:
                    self.state = 98
                    self.match(tuaParser.T__7)
                    self.state = 99
                    self.exp(0)
                    self.state = 100
                    self.match(tuaParser.T__6)
                    self.state = 101
                    self.block()
                    self.state = 107
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9:
                    self.state = 108
                    self.match(tuaParser.T__8)
                    self.state = 109
                    self.block()


                self.state = 112
                self.match(tuaParser.T__3)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 114
                self.match(tuaParser.T__9)
                self.state = 115
                self.match(tuaParser.NAME)
                self.state = 116
                self.match(tuaParser.T__1)
                self.state = 117
                self.exp(0)
                self.state = 118
                self.match(tuaParser.T__10)
                self.state = 119
                self.exp(0)
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==11:
                    self.state = 120
                    self.match(tuaParser.T__10)
                    self.state = 121
                    self.exp(0)


                self.state = 124
                self.match(tuaParser.T__2)
                self.state = 125
                self.block()
                self.state = 126
                self.match(tuaParser.T__3)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 128
                self.match(tuaParser.T__9)
                self.state = 129
                self.match(tuaParser.NAME)
                self.state = 130
                self.match(tuaParser.T__10)
                self.state = 131
                self.match(tuaParser.NAME)
                self.state = 132
                self.match(tuaParser.T__11)
                self.state = 133
                self.functioncall()
                self.state = 134
                self.match(tuaParser.T__2)
                self.state = 135
                self.block()
                self.state = 136
                self.match(tuaParser.T__3)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 138
                self.match(tuaParser.T__12)
                self.state = 139
                self.match(tuaParser.NAME)
                self.state = 140
                self.functionbody()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(tuaParser.NAME, 0)

        def suffix(self):
            return self.getTypedRuleContext(tuaParser.SuffixContext,0)


        def getRuleIndex(self):
            return tuaParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = tuaParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(tuaParser.NAME)
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 144
                self.suffix()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NametypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(tuaParser.NAME, 0)

        def type_(self):
            return self.getTypedRuleContext(tuaParser.TypeContext,0)


        def getRuleIndex(self):
            return tuaParser.RULE_nametype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNametype" ):
                listener.enterNametype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNametype" ):
                listener.exitNametype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNametype" ):
                return visitor.visitNametype(self)
            else:
                return visitor.visitChildren(self)




    def nametype(self):

        localctx = tuaParser.NametypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_nametype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(tuaParser.NAME)
            self.state = 148
            self.match(tuaParser.T__13)
            self.state = 149
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(tuaParser.NAME, 0)

        def NIL(self):
            return self.getToken(tuaParser.NIL, 0)

        def listType(self):
            return self.getTypedRuleContext(tuaParser.ListTypeContext,0)


        def unionType(self):
            return self.getTypedRuleContext(tuaParser.UnionTypeContext,0)


        def tableType(self):
            return self.getTypedRuleContext(tuaParser.TableTypeContext,0)


        def getRuleIndex(self):
            return tuaParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = tuaParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [48]:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.match(tuaParser.NAME)
                pass
            elif token in [51]:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.match(tuaParser.NIL)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 153
                self.listType()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 4)
                self.state = 154
                self.unionType()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 5)
                self.state = 155
                self.tableType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(tuaParser.TypeContext,0)


        def getRuleIndex(self):
            return tuaParser.RULE_tableType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableType" ):
                listener.enterTableType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableType" ):
                listener.exitTableType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableType" ):
                return visitor.visitTableType(self)
            else:
                return visitor.visitChildren(self)




    def tableType(self):

        localctx = tuaParser.TableTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tableType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(tuaParser.T__14)
            self.state = 159
            self.match(tuaParser.T__15)
            self.state = 160
            self.type_()
            self.state = 161
            self.match(tuaParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnionTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tuaParser.TypeContext)
            else:
                return self.getTypedRuleContext(tuaParser.TypeContext,i)


        def getRuleIndex(self):
            return tuaParser.RULE_unionType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnionType" ):
                listener.enterUnionType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnionType" ):
                listener.exitUnionType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnionType" ):
                return visitor.visitUnionType(self)
            else:
                return visitor.visitChildren(self)




    def unionType(self):

        localctx = tuaParser.UnionTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_unionType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(tuaParser.T__17)
            self.state = 164
            self.match(tuaParser.T__15)
            self.state = 165
            self.type_()
            self.state = 168 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 166
                self.match(tuaParser.T__10)
                self.state = 167
                self.type_()
                self.state = 170 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==11):
                    break

            self.state = 172
            self.match(tuaParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(tuaParser.TypeContext,0)


        def getRuleIndex(self):
            return tuaParser.RULE_listType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListType" ):
                listener.enterListType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListType" ):
                listener.exitListType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListType" ):
                return visitor.visitListType(self)
            else:
                return visitor.visitChildren(self)




    def listType(self):

        localctx = tuaParser.ListTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_listType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(tuaParser.T__18)
            self.state = 175
            self.match(tuaParser.T__15)
            self.state = 176
            self.type_()
            self.state = 177
            self.match(tuaParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrefixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(tuaParser.VarContext,0)


        def functioncall(self):
            return self.getTypedRuleContext(tuaParser.FunctioncallContext,0)


        def suffix(self):
            return self.getTypedRuleContext(tuaParser.SuffixContext,0)


        def getRuleIndex(self):
            return tuaParser.RULE_prefix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrefix" ):
                listener.enterPrefix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrefix" ):
                listener.exitPrefix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrefix" ):
                return visitor.visitPrefix(self)
            else:
                return visitor.visitChildren(self)




    def prefix(self):

        localctx = tuaParser.PrefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_prefix)
        try:
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.var()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.functioncall()
                self.state = 182
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 181
                    self.suffix()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuffixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(tuaParser.ExpContext,i)


        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(tuaParser.NAME)
            else:
                return self.getToken(tuaParser.NAME, i)

        def getRuleIndex(self):
            return tuaParser.RULE_suffix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuffix" ):
                listener.enterSuffix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuffix" ):
                listener.exitSuffix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuffix" ):
                return visitor.visitSuffix(self)
            else:
                return visitor.visitChildren(self)




    def suffix(self):

        localctx = tuaParser.SuffixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_suffix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 192
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [16]:
                        self.state = 186
                        self.match(tuaParser.T__15)
                        self.state = 187
                        self.exp(0)
                        self.state = 188
                        self.match(tuaParser.T__16)
                        pass
                    elif token in [20]:
                        self.state = 190
                        self.match(tuaParser.T__19)
                        self.state = 191
                        self.match(tuaParser.NAME)
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 194 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(tuaParser.ExpContext,i)


        def number(self):
            return self.getTypedRuleContext(tuaParser.NumberContext,0)


        def string(self):
            return self.getTypedRuleContext(tuaParser.StringContext,0)


        def TRUE(self):
            return self.getToken(tuaParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(tuaParser.FALSE, 0)

        def NIL(self):
            return self.getToken(tuaParser.NIL, 0)

        def prefix(self):
            return self.getTypedRuleContext(tuaParser.PrefixContext,0)


        def unop(self):
            return self.getTypedRuleContext(tuaParser.UnopContext,0)


        def tableconstructor(self):
            return self.getTypedRuleContext(tuaParser.TableconstructorContext,0)


        def binopPower(self):
            return self.getTypedRuleContext(tuaParser.BinopPowerContext,0)


        def binopMulDivMod(self):
            return self.getTypedRuleContext(tuaParser.BinopMulDivModContext,0)


        def binopAddSub(self):
            return self.getTypedRuleContext(tuaParser.BinopAddSubContext,0)


        def binopConcat(self):
            return self.getTypedRuleContext(tuaParser.BinopConcatContext,0)


        def binopComparison(self):
            return self.getTypedRuleContext(tuaParser.BinopComparisonContext,0)


        def binopAnd(self):
            return self.getTypedRuleContext(tuaParser.BinopAndContext,0)


        def binopOr(self):
            return self.getTypedRuleContext(tuaParser.BinopOrContext,0)


        def getRuleIndex(self):
            return tuaParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)



    def exp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = tuaParser.ExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_exp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 214
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 197
                self.match(tuaParser.T__20)
                self.state = 198
                self.exp(0)
                self.state = 199
                self.match(tuaParser.T__21)
                pass

            elif la_ == 2:
                self.state = 201
                self.number()
                pass

            elif la_ == 3:
                self.state = 202
                self.string()
                pass

            elif la_ == 4:
                self.state = 203
                self.match(tuaParser.TRUE)
                pass

            elif la_ == 5:
                self.state = 204
                self.match(tuaParser.FALSE)
                pass

            elif la_ == 6:
                self.state = 205
                self.match(tuaParser.NIL)
                pass

            elif la_ == 7:
                self.state = 206
                self.prefix()
                pass
